--- a/index.html
+++ b/index.html
@@ -15,23 +15,31 @@
     <!-- fixed nav -->
     <header>
         <nav>
-
+            <!-- gender list -->
             <ul id="gender">
                 <li>
-                    <a href="#">Uomo</a>
+                    <a href="#">
+                        <strong>Uomo</strong> 
+                    </a>
                 </li>
                 <li>
-                    <a href="#">Donna</a>
+                    <a href="#">
+                        <strong>Donna</strong> 
+                    </a>
                 </li>
                 <li>
-                    <a href="#">Bambini</a>
+                    <a href="#">
+                        <strong>Bambini</strong> 
+                    </a>
                 </li>
             </ul>
 
+            <!-- logo image -->
             <span id="logo">
                 <img src="img/boolean-logo.png" alt="boolean-logo">
             </span>
 
+            <!-- icons -->
             <span id="header-icon">
                 <i class="fa-regular fa-user" style="color: #ffffff;"></i>
                 <i class="fa-sharp fa-solid fa-heart" style="color: #ffffff;"></i>
