--- a/index.html
+++ b/index.html
@@ -50,7 +50,230 @@
         </nav>
     </header>
 
+    <!-- articles -->
     <main>
+
+        <div class="row">
+
+            <article>
+
+                <img src="img/1.webp" alt="model">
+
+                <div class="overlay">
+                    <img src="img/1b.webp" alt="different model pose">
+                </div>
+
+                <div class="text">
+
+                    <div class="brand">
+                        Levi's
+                    </div>
+
+                    <div class="name">
+                        <strong>RELAXED FIT TEE UNISEX</strong>
+                    </div>
+
+                    <div class="price">
+
+                        <span class="red">
+                            <strong>14,99 &euro;</strong> 
+                        </span>
+
+                        <span class="old-price">
+                            <strong>29,99 &euro;</strong> 
+                        </span>
+
+                    </div>
+
+                </div>
+
+                <span class="scount">-50%</span>
+
+                <span class="eco-friendly">Sostenibilità</span>
+
+                <span class="heart">
+                    <strong>&hearts;</strong>
+                </span>
+
+            </article>
+
+            <article>
+
+                <img src="img/2.webp" alt="model">
+
+                <div class="text">
+
+                    <div class="brand">
+                        Guess
+                    </div>
+
+                    <div class="name">
+                        <strong>ROSES TEE</strong>
+                    </div>
+
+                    <div class="price">
+
+                        <span class="red">
+                            <strong>20,99 &euro;</strong> 
+                        </span>
+
+                        <span class="old-price">
+                            <strong>29,99 &euro;</strong> 
+                        </span>
+
+                    </div>
+
+                </div>
+
+                <span class="scount">-30%</span>
+
+                <span class="heart">
+                    <strong>&hearts;</strong>
+                </span>
+
+            </article>
+
+            <article>
+
+                <img src="img/3.webp" alt="model">
+
+                <div class="text">
+
+                    <div class="brand">
+                        Come zucchero filato
+                    </div>
+
+                    <div class="name">
+                        <strong>VOGLIA DI COLORI PASTELLO</strong>
+                    </div>
+
+                    <div class="price">
+
+                        <span class="red">
+                            <strong>129,99 &euro;</strong> 
+                        </span>
+
+                        <span class="old-price">
+                            <strong>184,99 &euro;</strong> 
+                        </span>
+
+                    </div>
+
+                </div>
+
+                <span class="scount">-30%</span>
+
+                <span class="heart">
+                    <strong>&hearts;</strong>
+                </span>
+
+            </article>
+
+        </div>
+
+        <div class="row">
+
+            <article>
+
+                <img src="img/4.webp" alt="model">
+
+                <div class="text">
+
+                    <div class="brand">
+                        Levi's
+                    </div>
+
+                    <div class="name">
+                        <strong>TEE UNISEX</strong>
+                    </div>
+
+                    <div class="price">
+
+                        <span class="red">
+                            <strong>14,99 &euro;</strong> 
+                        </span>
+
+                        <span class="old-price">
+                            <strong>29,99 &euro;</strong> 
+                        </span>
+
+                    </div>
+
+                </div>
+
+                <span class="scount">-50%</span>
+
+                
+
+                <span class="heart">
+                    <strong>&hearts;</strong>
+                </span>
+
+            </article>
+
+            <article>
+
+                <img src="img/5.webp" alt="model">
+
+                <div class="text">
+
+                    <div class="brand">
+                        Maya deluxe
+                    </div>
+
+                    <div class="name">
+                        <strong>STRIPE BODICE</strong>
+                    </div>
+
+                    <div class="price">
+
+                        <span class="red">
+                            <strong>99,99 &euro;</strong> 
+                        </span>
+
+                    </div>
+
+                </div>
+
+                <span class="heart">
+                    <strong>&hearts;</strong>
+                </span>
+
+            </article>
+
+            <article>
+
+                <img src="img/6.webp" alt="model">
+
+                <div class="text">
+
+                    <div class="brand">
+                        Espirit
+                    </div>
+
+                    <div class="name">
+                        <strong>MAGLIONE - BLACK</strong>
+                    </div>
+
+                    <div class="price">
+
+                        <span class="red">
+                            <strong>29,99 &euro;</strong> 
+                        </span>
+
+                    </div>
+
+                </div>
+
+                <span id="eco-friendly-alone">Sostenibilità</span>
+
+                <span class="heart">
+                    <strong>&hearts;</strong>
+                </span>
+
+            </article>
+
+        </div>
 
     </main>
 
