main and footer

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </span>
 
             <!-- icons -->
-            <span id="header-icon">
+            <span class="icon">
                 <i class="fa-regular fa-user" style="color: #ffffff;"></i>
                 <i class="fa-sharp fa-solid fa-heart" style="color: #ffffff;"></i>
                 <i class="fa-solid fa-cart-shopping" style="color: #ffffff;"></i>
@@ -57,11 +57,9 @@
 
             <article>
 
-                <img src="img/1.webp" alt="model">
+                <img class="img-a" src="img/1.webp" alt="model">
 
-                <div class="overlay">
-                    <img src="img/1b.webp" alt="different model pose">
-                </div>
+                <img  class="img-b" src="img/1b.webp" alt="different model pose">
 
                 <div class="text">
 
@@ -99,7 +97,9 @@
 
             <article>
 
-                <img src="img/2.webp" alt="model">
+                <img class="img-a" src="img/2.webp" alt="model">
+
+                <img  class="img-b" src="img/2b.webp" alt="different model pose">
 
                 <div class="text">
 
@@ -135,7 +135,9 @@
 
             <article>
 
-                <img src="img/3.webp" alt="model">
+                <img class="img-a" src="img/3.webp" alt="model">
+
+                <img  class="img-b" src="img/3b.webp" alt="different model pose">
 
                 <div class="text">
 
@@ -175,7 +177,9 @@
 
             <article>
 
-                <img src="img/4.webp" alt="model">
+                <img class="img-a" src="img/4.webp" alt="model">
+
+                <img  class="img-b" src="img/4b.webp" alt="different model pose">
 
                 <div class="text">
 
@@ -213,7 +217,9 @@
 
             <article>
 
-                <img src="img/5.webp" alt="model">
+                <img class="img-a" src="img/5.webp" alt="model">
+
+                <img  class="img-b" src="img/5b.webp" alt="different model pose">
 
                 <div class="text">
 
@@ -243,7 +249,9 @@
 
             <article>
 
-                <img src="img/6.webp" alt="model">
+                <img class="img-a" src="img/6.webp" alt="model">
+
+                <img  class="img-b" src="img/6b.webp" alt="different model pose">
 
                 <div class="text">
 
@@ -279,9 +287,48 @@
 
     <footer>
 
-        <div id="contact">
+        <div id="information">
 
-            div
+            <div id="legal">
+
+                <div id="business-name">
+                    <strong>Boolando S.r.l</strong>
+                </div>
+
+                <ul>
+
+                    <li>
+                        <a href="#">Informazioni legali</a>
+                    </li>
+                    
+
+                    <li>
+                        <a href="#">Informativa sulla privacy</a>
+                    </li>
+
+                    <li>
+                        <a href="#">Diritto di recesso</a>
+                    </li>
+
+                </ul>
+
+            </div>
+
+            <div id="contact">
+
+                <strong>Trovaci anche su :</strong>
+
+                <div class="icon">
+
+                    <i class="fa-brands fa-twitter" style="color: #ffffff;"></i>
+                    <i class="fa-brands fa-facebook" style="color: #ffffff;"></i>
+                    <i class="fa-brands fa-instagram" style="color: #ffffff;"></i>
+                    <i class="fa-brands fa-tiktok" style="color: #ffffff;"></i>
+                    <i class="fa-brands fa-youtube" style="color: #ffffff;"></i>
+
+                </div>
+
+            </div>
 
         </div>
 
